--- a/css/custom.css
+++ b/css/custom.css
@@ -21,7 +21,7 @@ footer {
   display: inline-block;
   width: 60px;
   height: 60px;
-  margin: 0 auto;
+  margin: 0 3em 0 auto;
   padding: 0;
   float: none;
 }
