--- a/css/custom.css
+++ b/css/custom.css
@@ -30,12 +30,41 @@ footer {
   background-color: #333;
 }
 
+
+/* Nav Stuff */
+
+.navbar, .navbar-inverse {
+  border-radius: 0;
+  border: none;
+  margin-bottom: 0;
+  min-height: 60px;
+}
+
+.nav li {
+  display: inline;
+  color: white;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+  color: #ffffff;
+  font-family: Lato;
+  font-size: 1.4em;
+  font-weight: 300;
+  padding: 20px 25px 20px 25px;
+}
+
+.navbar-inverse .navbar-nav li a:hover {
+  background-color: #444444;
+  transition: 0.7s all linear;
+  height: 100%;
+}
+
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm-min) { 
-
+@media (max-width: @screen-sm-min) { 
+  
 }
 
 /* Medium devices (desktops, 992px and up) */
